# metaflow-traincard

./: .gitignore  LICENSE  PRD.md  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: demo_flow.py
src/metaflow_extensions/traincard/plugins/cards/traincard/: __init__.py
src/metaflow_traincard/: __init__.py  _html.py  card.py  reporter.py
src/metaflow_traincard/adapters/: __init__.py  huggingface.py
tests/: conftest.py  test_adapters.py  test_card.py  test_reporter.py
