[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metaflow-traincard"
version = "0.1.0"
description = "Real-time training observability cards for Metaflow — framework-agnostic, zero infra"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["metaflow", "training", "observability", "mlops", "llm", "cards"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "metaflow>=2.10",
]

[project.optional-dependencies]
hf = ["transformers>=4.20"]
lightning = ["lightning>=2.0"]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "psutil>=5.9",
]

[project.entry-points."metaflow.cards"]
traincard = "metaflow_traincard.card:TrainCard"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["metaflow_traincard"]
branch = true

[tool.coverage.report]
show_missing = true
